--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Control de Asistencia - CETIS No. 45</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles-unified.css">
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#8b1538">
     <meta name="apple-mobile-web-app-capable" content="yes">
