--- a/reportes.html
+++ b/reportes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reportes de Asistencia - CETIS No. 45</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles-unified.css">
     <style>
         /* Estilos específicos para reportes mejorados */
         .reports-container {
