--- a/credenciales.html
+++ b/credenciales.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Generador de Credenciales - CETIS No. 45</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles-unified.css">
     <style>
         .generator-container {
             max-width: 1000px;
