--- a/generador.html
+++ b/generador.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Generador de Códigos QR - CETIS No. 45</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles-unified.css">
     <style>
         .generator-container {
             max-width: 1000px;
@@ -1103,4 +1103,5 @@
         console.log('✅ Generador.js cargado completamente (CETIS 45)');
     </script>
 </body>
+
 </html>
